2004-07-07  Andreas Tobler  <a.tobler@schweiz.ch>

	* configure.host: Enable hash synchronization on Darwin.
	* sysdep/powerpc/locks.h (compare_and_swap): Use '\n' instead of
	';', since this is a comment on Darwin.
	(compare_and_swap_release): Likewise.

2004-07-06  Mohan Embar  <gnustuff@thisiscool.com>

	* java/net/URLStreamHandler.java (parseURL): Canonicalize
	file portion of URL in addition to spec for file: protocol.

2004-07-05  Anthony Green  <green@redhat.com>

	* java/io/File.java (toURI): Merge from Classpath.

2004-07-05  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/gcj/runtime/VMClassLoader.java (init): Check classpath entry
	before passing to URL constructor. Rethrow any MalformedURLException
	as a RuntimeException. Catch MalformedURLException specifically, not
	all exceptions.

2004-07-05  Bryce McKinlay  <mckinlay@redhat.com>

	* java/util/Locale.java (readObject): Intern strings read from object
	stream.

2004-07-04  Michael Koch  <konqueror@gmx.de>

	* gnu/gcj/runtime/FirstThread.java,
	gnu/gcj/runtime/natFirstThread.cc: Removed.
	* gnu/java/lang/MainThread.java,
	gnu/java/lang/natMainThread.cc: New files.
	* prims.cc (_Jv_RunMain): Use MainThread instead of FirstThread.
	* Makefile.am: Added new files and removed deleted ones.
	* Makefile.in: Regenerated.

2004-07-03  Mark Wielaard  <mark@klomp.org>
	    Anthony Green  <green@redhat.com>

	* java/net/URL.java (getFile): Clarify return value doc.
	(getPath): Return null if file is empty - not empty String.
	(set): Convert protocol to lower case before doing anything.
	Only change the protocol handler if it's different.

2004-07-03  Anthony Green  <green@redhat.com>

	* java/net/URL.java (URL): Convert protocol to lower case before
	doing anything, so we getURLStreamHandler() with the proper value.

2004-07-02  Bryce McKinlay  <mckinlay@redhat.com>

	* java/util/Locale.java (hashcode): Made transient.
	(hashCode): No longer synchronized.
	(equals): Remove comment.